# Computational-Math

./: .gitignore  Adams.cpp  Adams.hpp  CMakeLists.txt  CoMa.hpp  DataTable.hpp  Dumper.cpp  Dumper.hpp  FunctionMatrix.cpp  FunctionMatrix.hpp  Integrator.cpp  Integrator.hpp  LinearSystem.cpp  LinearSystem.hpp  Matrix.cpp  Matrix.hpp  ODESolver.cpp  ODESolver.hpp  ODUSolver.cpp  ODUSolver.hpp  RKS.cpp  RKS.hpp  Rosenbrock.cpp  Rosenbrock.hpp  Solvers.cpp  Solvers.hpp  TableFunction.hpp
